force-app/src/objects/AccreditationStageActivity__c.object
<CustomObject>
    <fields>
        <fullName>AccreditationActivityName__c</fullName>
        <formula>AccreditationActivity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccreditationActivity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accreditation Activity</label>
        <referenceTo>AccreditationActivity__c</referenceTo>
        <relationshipLabel>Accreditation Stage Activities</relationshipLabel>
        <relationshipName>AccreditationStageActivities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccreditationCycleStageLink__c</fullName>
        <formula>AccreditationCycleStage__r.CycleStageLink__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation Cycle Stage Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccreditationCycleStage__c</fullName>
        <label>Accreditation Cycle Stage</label>
        <referenceTo>AccreditationCycleStage__c</referenceTo>
        <relationshipLabel>Accreditation Stage Activities</relationshipLabel>
        <relationshipName>AccreditationStageActivities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccreditationCycle__c</fullName>
        <label>Accreditation Cycle</label>
        <referenceTo>AccreditationCycle__c</referenceTo>
        <relationshipLabel>Accreditation Stage Activities</relationshipLabel>
        <relationshipName>AccreditationStageActivities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccreditationName__c</fullName>
        <formula>AccreditationCycle__r.Accreditation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accreditation</label>
        <referenceTo>Accreditation__c</referenceTo>
        <relationshipLabel>Accreditation Stage Activities</relationshipLabel>
        <relationshipName>AccreditationStageActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>Activity Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DemoCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DemoDate__c</fullName>
        <label>Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DemoDatetime__c</fullName>
        <label>Demo Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>Obsolete</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EarlySubmissionDueDateOverride__c</fullName>
        <description>Setting a date here will override the Due Date that is based on the Evaluation Visit dates. Note: always use the Early Submission Due Date field for reporting purposes.</description>
        <inlineHelpText>Setting a date here will override the Due Date that is based on the Evaluation Visit dates. Note: always use the Early Submission Due Date field for reporting purposes.</inlineHelpText>
        <label>Early Submission Due Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EarlySubmissionDueDate__c</fullName>
        <description>Date is calculated based on the Evaluation Visit start date, the calculation differs depending on the stage.</description>
        <formula>CASE(AccreditationCycleStage__r.AccreditationStage__r.Name,
&apos;Team Evaluation&apos;, BLANKVALUE(EarlySubmissionDueDateOverride__c, ADDMONTHS(AccreditationCycleStage__r.EvaluationVisitStartDate__c, -8)),
&apos;Preparatory Evaluation&apos;, BLANKVALUE(EarlySubmissionDueDateOverride__c, AccreditationCycleStage__r.EvaluationVisitStartDate__c -70),
BLANKVALUE(EarlySubmissionDueDateOverride__c, NULL)
)</formula>
        <label>Early Submission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EarlySubmissionReceived__c</fullName>
        <label>Early Submission Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EvaluationReportCopyEditingSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Correlating field for Task related to the Accreditation Activity, set automatically when the task is marked as &apos;Completed&apos;.</description>
        <label>Evaluation Report Copy Editing Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EvaluationReportDraftSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Correlating field for Task related to the Accreditation Activity, set automatically when the task is marked as &apos;Completed&apos;.</description>
        <label>Evaluation Report Draft Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EvaluationReportPublicationSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Report Publication Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EvaluationReportReviewSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Correlating field for Task related to the Accreditation Activity, set automatically when the task is marked as &apos;Completed&apos;.</description>
        <label>Evaluation Report Review Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EvaluationReportSignOffSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Report Sign-Off Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EvaluationReportStatus__c</fullName>
        <label>Evaluation Report Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Being Drafted</fullName>
                </value>
                <value>
                    <fullName>Being Proofread</fullName>
                </value>
                <value>
                    <fullName>With SSEO for Review</fullName>
                </value>
                <value>
                    <fullName>With Reports Manager for Final Review</fullName>
                </value>
                <value>
                    <fullName>With SSA for Publication</fullName>
                </value>
                <value>
                    <fullName>Published on Portal</fullName>
                </value>
                <value>
                    <fullName>Ready for Sign Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvaluationVisitStartDate__c</fullName>
        <label>Evaluation Visit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EvaluationVisitType__c</fullName>
        <label>Evaluation Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-Site</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsEvaluationVisitDatesConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Visit Dates Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolReportDueDateOverride__c</fullName>
        <description>Setting a date here will override the Due Date that is based on the Evaluation Visit dates. Note: always use the School Report Due Date field for reporting purposes.</description>
        <inlineHelpText>Setting a date here will override the Due Date that is based on the Evaluation Visit dates. Note: always use the School Report Due Date field for reporting purposes.</inlineHelpText>
        <label>School Report Due Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SchoolReportDueDate__c</fullName>
        <description>Date is calculated based on the Evaluation Visit start date, the calculation differs depending on the stage.</description>
        <formula>CASE(AccreditationCycleStage__r.AccreditationStage__r.Name,
&apos;Team Evaluation&apos;, BLANKVALUE(AccreditationCycleStage__r.SchoolReportDueDate__c, BLANKVALUE(SchoolReportDueDateOverride__c, AccreditationCycleStage__r.EvaluationVisitStartDate__c - 56)),
&apos;Preparatory Engagement&apos;, BLANKVALUE(AccreditationCycleStage__r.SchoolReportDueDate__c, BLANKVALUE(SchoolReportDueDateOverride__c, AccreditationCycleStage__r.EvaluationVisitStartDate__c - 56)),
&apos;Preparatory Evaluation&apos;, BLANKVALUE(AccreditationCycleStage__r.SchoolReportDueDate__c, BLANKVALUE(SchoolReportDueDateOverride__c, AccreditationCycleStage__r.EvaluationVisitStartDate__c - 28)),
BLANKVALUE(SchoolReportDueDateOverride__c, NULL)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This can be overridden. If not applicable the School Report Due date on the Accreditation Cycle Stage should be used.</inlineHelpText>
        <label>School Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SchoolReportReceived__c</fullName>
        <label>School Report Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SchoolReportStatus__c</fullName>
        <label>School Report Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Domain A submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Reopened (More information needed)</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <formula>RIGHT(TEXT(YEAR(DATEVALUE(TEXT(YEAR(StartDate__c)) &amp; &quot;-&quot; &amp; TEXT(MONTH(StartDate__c)) &amp; &quot;-1&quot;))), 2) &amp; &quot;-&quot; &amp; IF(MONTH(DATEVALUE(TEXT(YEAR(StartDate__c)) &amp; &quot;-&quot; &amp; TEXT(MONTH(StartDate__c)) &amp; &quot;-1&quot;)) &lt;= 6, &quot;1&quot;, &quot;2&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Semester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageActivityLink__c</fullName>
        <formula>HYPERLINK(
&quot;/&quot; &amp; Id, AccreditationActivity__r.DisplayName__c &amp; &quot; (&quot; &amp; Name &amp; &quot;)&quot;,
&quot;_self&quot;
)</formula>
        <label>Stage Activity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageActivityName__c</fullName>
        <formula>AccreditationActivity__r.DisplayName__c &amp; &quot; (&quot; &amp; Name &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageActivity__c</fullName>
        <label>Stage Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Activity Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Accreditation Stage Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Stage Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditation Stage Activities</pluralLabel>
    <recordTypes>
        <fullName>Evaluation_Outcome</fullName>
        <active>true</active>
        <label>Evaluation Outcome</label>
    </recordTypes>
    <recordTypes>
        <fullName>Evaluation_Report</fullName>
        <active>true</active>
        <label>Evaluation Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Evaluation_Visit</fullName>
        <active>true</active>
        <label>Evaluation Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>School_Report</fullName>
        <active>true</active>
        <label>School Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unassigned</fullName>
        <active>true</active>
        <label>Unassigned</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Accreditation_Prevent_Empty_Visit_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(IsEvaluationVisitDatesConfirmed__c)
&amp;&amp; IsEvaluationVisitDatesConfirmed__c
&amp;&amp; (
  ISBLANK(AccreditationCycleStage__r.EvaluationVisitStartDate__c) ||
  ISBLANK(AccreditationCycleStage__r.EvaluationVisitEndDate__c)
)</errorConditionFormula>
        <errorMessage>The Evaluation Visit dates have not been set!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Changing_Assigned_RecordType</fullName>
        <active>true</active>
        <description>This validation rule prevents changing the RecordType once it has been assigned to an Accreditation Stage Activity. This assignment is done via an Apex trigger handler in the beforeInsert context.</description>
        <errorConditionFormula>ISCHANGED(RecordTypeId) &amp;&amp;
!ISNEW()</errorConditionFormula>
        <errorMessage>You cannot change the RecordType once it has been assigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Override_Without_Visit_Dates</fullName>
        <active>true</active>
        <description>This validation rule prevents setting override dates when the evaluation visit dates have not been set.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;
CONTAINS(RecordType.DeveloperName, &apos;Evaluation_Visit&apos;) &amp;&amp;
ISBLANK(AccreditationCycleStage__r.EvaluationVisitStartDate__c) &amp;&amp;
(!ISBLANK(SchoolReportDueDateOverride__c) || !ISBLANK(EarlySubmissionDueDateOverride__c))</errorConditionFormula>
        <errorMessage>You cannot set the override date for either the School Report Due Date or the Early Submission Due Date when the Evaluation Visit Dates have not been set.</errorMessage>
    </validationRules>
</CustomObject>